Fix button layout shift when collapsing file tree in editor

--- a/web_src/css/repo.css
+++ b/web_src/css/repo.css
@@ -200,8 +200,7 @@ td .commit-summary {
 
 .repo-editor-header {
   display: flex;
-  margin: 1rem 0;
-  padding: 3px 0;
+  margin: 5px 0 1rem;
   width: 100%;
   gap: 0.5em;
   align-items: center;
